# EspeakTest

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/espeak/espeak/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/espeak/espeak/: MainActivity.java
app/src/main/java/com/espeak/espeak/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/reecedunn/espeak/: SpeechSynthesis.java  VoiceDataInstaller.java
app/src/main/jni/: phonemizer_jni.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/espeak/espeak/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
